--- a/custom-css/variables.scss
+++ b/custom-css/variables.scss
@@ -1,11 +1,10 @@
-
-$crimson: #b32c50;
+$skyblue : #1283bf;
 $darkseagreen  : #7da87b;
 $lightgray: #f2f2f2;
 $darkpurple: #34374c;
 $beige: #fff9d6;
 
-$primary-color: $crimson;
+$primary-color: $skyblue;
 $accent-color: $darkseagreen;
 $background-color: $lightgray;
 $dark-color: $darkpurple;
